[project]
name = "moccasin_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "moccasin>=0.4.2",
]


[tool.moccasin.project]
src = "contracts"
out = "out"
dot_env = ".env"
save_abi_path = "abis"
default_network_name = "eth-forked"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    # ... other dev dependencies
]
